Fix page size on small content pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,7 @@
 
   html,
   body {
-    @apply h-fit w-full;
+    @apply h-fit w-full min-h-screen min-w-full;
   }
 
   body {
